# Cursor_projects

./: .gitignore  README.md  requirements.txt
cpp_control/: CMakeLists.txt  README.md
cpp_control/src/: CMakeLists.txt  control_loop.cpp  control_loop.h  main.cpp  measurement.cpp  measurement.h  settings.cpp  settings.h  tcp_server.cpp  tcp_server.h
cpp_control/tests/: CMakeLists.txt  test_basic.cpp
insights/: analytics.py  db.py  seed_demo.py  viz.py
outputs/: cohort_retention.csv  orders_over_time.csv  rfm.csv
python_insights/: __init__.py  cli.py
